# mate-character-map

./: ChangeLog  ChangeLog.README  ChangeLog.pre-2-23  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  gtkrc.win32  mucharmap.desktop.in.in  mucharmap.nsi.in  mucharmap.pc.in  mucharmap.schemas.in  mucharmap.spec.in  org.mate.mucharmap.gschema.xml.in
.tx/: config
bindings/python/: Makefile.am  mucharmap.defs  mucharmap.override  mucharmapmodule.c
distro/archlinux/: PKGBUILD  mate-character-map.install
docs/reference/: Makefile.am  mucharmap-docs.sgml  mucharmap-sections.txt  mucharmap.types
docs/reference/html/: MucharmapBlockChaptersModel.html  MucharmapCodepointList.html  MucharmapScriptChaptersModel.html  ch01.html  index.html  index.sgml  mucharmap-mucharmap-chapters-model.html  mucharmap-mucharmap-chapters-view.html  mucharmap-mucharmap-charmap.html  mucharmap-mucharmap-chartable.html  mucharmap-mucharmap-script-codepoint-list.html  mucharmap-mucharmap-unicode-info.html  mucharmap.devhelp  mucharmap.devhelp2
docs/reference/tmpl/: mucharmap-block-chapters-model.sgml  mucharmap-block-codepoint-list.sgml  mucharmap-chapters-model.sgml  mucharmap-chapters-view.sgml  mucharmap-charmap.sgml  mucharmap-chartable.sgml  mucharmap-codepoint-list.sgml  mucharmap-script-chapters-model.sgml  mucharmap-script-codepoint-list.sgml  mucharmap-unicode-info.sgml  mucharmap-unused.sgml  mucharmap.sgml
help/: Makefile.am
help/C/: index.docbook  mucharmap.xml
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/fi/: fi.po
help/fr/: fr.po
help/it/: Makefile.am  legal.xml  mucharmap-it.omf  mucharmap.xml
help/ja/: Makefile.am  legal.xml  mucharmap-ja.omf  mucharmap.xml
help/ko/: ko.po
help/oc/: oc.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sv/: sv.po
help/vi/: vi.po
help/zh_CN/: zh_CN.po
help/zh_HK/: Makefile.am  legal.xml  mucharmap-zh_HK.omf  mucharmap.xml
help/zh_TW/: Makefile.am  mucharmap-zh_TW.omf  mucharmap.xml
mucharmap/: Makefile.am  gen-guch-unicode-tables.pl  main.c  mucharmap-block-chapters-model.c  mucharmap-block-chapters-model.h  mucharmap-block-codepoint-list.c  mucharmap-block-codepoint-list.h  mucharmap-chapters-model.c  mucharmap-chapters-model.h  mucharmap-chapters-view.c  mucharmap-chapters-view.h  mucharmap-charmap.c  mucharmap-charmap.h  mucharmap-chartable-accessible.c  mucharmap-chartable-accessible.h  mucharmap-chartable-cell-accessible.c  mucharmap-chartable-cell-accessible.h  mucharmap-chartable.c  mucharmap-chartable.h  mucharmap-codepoint-list.c  mucharmap-codepoint-list.h  mucharmap-init.c  mucharmap-mini-fontsel.c  mucharmap-mini-fontsel.h  mucharmap-print-operation.c  mucharmap-print-operation.h  mucharmap-private.h  mucharmap-script-chapters-model.c  mucharmap-script-chapters-model.h  mucharmap-script-codepoint-list.c  mucharmap-script-codepoint-list.h  mucharmap-search-dialog.c  mucharmap-search-dialog.h  mucharmap-settings.c  mucharmap-settings.h  mucharmap-type-builtins.c.template  mucharmap-type-builtins.h.template  mucharmap-unicode-info.c  mucharmap-unicode-info.h  mucharmap-window.c  (+10 more)
pixmaps/: Makefile.am
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  (+49 more)
